# MIMUW-S6-JPP-lab

./: .gitignore  MIMUW-S6-JPP-lab.cabal  README.md
lab1a/: Intro.hs  Moodle.hs
lab1b/: Folds.hs  FoldsTests.hs
lab2a/: DataStructures.hs  Functors.hs  Moodle.hs
lab2b/: Main.hs  TailRecAndLazyness.hs
lab3a/: BST.hs  BSTTests.hs  Expressions.hs  OrderedList.hs
lab3b/: Mnozenie.hs
src/lab4a/: FoldM.hs  ManyOperations.hs  MaybeEitherDemo.hs  MonadicOperations.hs
src/lab4b/: StateDemo.hs
