name:                 MIMUW-S6-JPP-lab
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Abrams27
maintainer:           abramowiczmarcin99@gmail.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable MIMUW-S6-JPP-lab
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010
